--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -20,12 +20,9 @@
   position: fixed;
   top: 0;
   left: 0;
-  display: none;
+  display: flex;
   z-index: 1;
+  visibility: hidden;
   opacity: 0;
-  transition: opacity 1s linear;
-}
-
-.popup:hover {
-  opacity: 1;
+  transition: visibility 0s 1s, opacity 1s linear;
 }
